--- a/TestAppForUI.Android/TestAppForUI.Android.csproj
+++ b/TestAppForUI.Android/TestAppForUI.Android.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
+    <Compile Include="RenderersDroid\AndroidEntryRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -142,5 +143,6 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\iconSitting.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
